project('ktx', 'c')

ktx_sources = [
	'src/grenade.c',
	'src/admin.c',
	'src/arena.c',
#	'src/bg_lib.c',
	'src/buttons.c',
	'src/captain.c',
	'src/clan_arena.c',
	'src/client.c',
	'src/combat.c',
	'src/commands.c',
	'src/ctf.c',
	'src/doors.c',
	'src/fb_globals.c',
	'src/files.c',
	'src/g_cmd.c',
	'src/globals.c',
	'src/g_main.c',
	'src/g_mem.c',
	'src/grapple.c',
	'src/g_spawn.c',
	'src/g_syscalls.c',
	'src/g_userinfo.c',
	'src/g_utils.c',
	'src/hoonymode.c',
	'src/items.c',
	'src/logs.c',
	'src/maps.c',
	'src/marker_load.c',
	'src/marker_util.c',
	'src/match.c',
	'src/mathlib.c',
	'src/misc.c',
	'src/tforthlp.c',
	'src/motd.c',
	'src/native_lib.c',
	'src/plats.c',
	'src/player.c',
	'src/q_shared.c',
	'src/race.c',
	'src/route_calc.c',
	'src/route_fields.c',
	'src/route_lookup.c',
	'src/runes.c',
	'src/server.c',
	'src/sp_client.c',
	'src/spectate.c',
	'src/stats.c',
	'src/stats_json.c',
	'src/stats_xml.c',
	'src/subs.c',
	'src/teamplay.c',
	'src/triggers.c',
	'src/vip.c',
	'src/vote.c',
	'src/weapons.c',
	'src/world.c',
]

library('qwprogs', ktx_sources,
	include_directories : include_directories('include'),
#	c_args : '-DBOT_SUPPORT=1',
	dependencies : [
		meson.get_compiler('c').find_library('m', required : false)
	],
	name_prefix : ''
)
